--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -66,7 +66,9 @@
     "type_traits": "cpp",
     "typeinfo": "cpp",
     "unordered_map": "cpp",
-    "utility": "cpp"
+    "utility": "cpp",
+    "numeric": "cpp",
+    "random": "cpp"
   },
   "cmake.configureOnOpen": false
 }
