--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,23 +1,38 @@
-CMAKE_MINIMUM_REQUIRED(VERSION 2.8.3)
-cmake_policy(SET CMP0054 NEW)
-IF (WIN32)
-	# VCPKG
-	if(DEFINED ENV{VCPKG_ROOT} AND NOT DEFINED CMAKE_TOOLCHAIN_FILE)
-		set(CMAKE_TOOLCHAIN_FILE "$ENV{VCPKG_ROOT}/scripts/buildsystems/vcpkg.cmake" CACHE STRING "")
-	endif()
-ENDIF ()
+cmake_minimum_required(VERSION 3.16)
+project(minecraft)
 
-project(GLSL)
+set(CMAKE_CXX_STANDARD 14)
 
-FILE(GLOB cmakes ${CMAKE_SOURCE_DIR}/cmake/*.cmake)
-FOREACH(cmake ${cmakes})
-	INCLUDE(${cmake})
-ENDFOREACH(cmake)
+include_directories(lib/utgraphicsutil)
+include_directories(src)
 
-MESSAGE(STATUS "stdgl: ${stdgl_libraries}")
-
-ADD_SUBDIRECTORY(src)
-
-IF (EXISTS ${CMAKE_SOURCE_DIR}/sln/CMakeLists.txt)
-	ADD_SUBDIRECTORY(sln)
-ENDIF()
+add_executable(minecraft
+        lib/utgraphicsutil/debuggl.cc
+        lib/utgraphicsutil/debuggl.h
+        lib/utgraphicsutil/image.h
+        lib/utgraphicsutil/jpegio.cc
+        lib/utgraphicsutil/jpegio.h
+        lib/utgraphicsutil/material.h
+        lib/utgraphicsutil/portable_gl.h
+        src/config.h
+        src/chunk.cpp
+        src/chunk.h
+        src/gui.cc
+        src/gui.h
+        src/main.cc
+        src/procedure_geometry.cc
+        src/procedure_geometry.h
+        src/render_pass.cc
+        src/render_pass.h
+        src/shader_uniform.cc
+        src/shader_uniform.h
+        src/block.cc
+        src/block.h
+        src/chunkmanager.cpp
+        src/chunkmanager.h
+        src/skybox.cpp
+        src/skybox.h
+        src/perlin.cc
+        src/perlin.h
+        src/terrain_generator.cc
+        src/terrain_generator.h)
